src/index.css
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: Roboto, sans-serif;
  font-size: 16px;
  position: relative;
}
input:focus {
  outline: none;
}
ul li {
  list-style-type: none;
}
body {
  background-color: rgb(229, 233, 241);
}
.mobile-menu {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  background-color: white;
  width: 100vw;
  height: 100vh;
  z-index: 1001;
}
@keyframes item_slide_down {
  0% {
    transform: translateY(100%);
  }
  100% {
    transform: translateY(0);
  }
}
@keyframes moving_plane {
  0% {
    transform: translateY(0);
  }
  50% {
    transform: translateY(10%);
  }
  100% {
    transform: translateY(0);
  }
}
@keyframes the_moving_plane {
  0% {
    transform: rotate(0);
  }
  25% {
    transform: rotate(15deg) translate(50px);
  }
  50% {
    transform: rotate(0);
  }
  75% {
    transform: rotate(-25deg);
  }
  100% {
    transform: rotate(0);
  }
}
@keyframes opacity {
  0% {
    opacity: 0.1;
  }
  100% {
    opacity: 0.3;
  }
}
@keyframes fade_and_pop {
  0% {
    opacity: 0;
  }
  50% {
    opacity: 1;
    transform: scale(1.1);
  }
  100% {
    transform: scale(1);
  }
}
.info_item_loader {
  animation: opacity 1s ease-in-out infinite;
  color: rgba(0, 0, 0, 0);
  background-color: rgba(0, 0, 0, 0.3);
  border-radius: 50px;
}
.ticket_loader_info_1 {
  width: 45%;
}
.ticket_loader_info_2 {
  width: 30%;
}
.ticket_loader_info_3 {
  width: 20%;
}
/*-------------------------------------------------------------*/
.drp-selected {
  display: none !important;
}
.ui-datepicker {
  z-index: 5 !important;
  width: 300px;
  border: none !important;
  color: #e25a00 !important;
  display: none;
  padding: 10px 20px;
  position: absolute;
  margin-left: 4px !important;
}
.secondJQuery {
  margin-left: -205px !important;
}
.ui-datepicker div,
.ui-datepicker a span.ui-icon {
  border: none !important;
  background-color: rgb(173, 255, 255) !important;
  color: #003f7a !important;
}
.ui-datepicker-header {
  box-shadow: 0px 1.6px 3.6px rgba(0, 0, 0, 0.2),
    0px 0px 2.9px rgba(0, 0, 0, 0.23);
}
.ui-datepicker a {
  background: none !important;
  color: white !important;
  border: none !important;
  background-color: #003f7a !important;
  border-radius: 3px !important;
  font-size: 14px !important;
  box-shadow: 0px 1.6px 3.6px rgba(0, 0, 0, 0.3),
    0px 0px 2.9px rgba(0, 0, 0, 0.33);
}
.ui-datepicker a.ui-corner-all {
  border: none !important;
  background-color: rgb(173, 255, 255) !important;
  box-shadow: none !important;
}
.ui-datepicker a:hover {
  background-color: #e25a00 !important;
  color: white !important;
}
.ui-datepicker a.ui-corner-all:hover {
  background: none !important;
}
.ui-autocomplete {
  max-width: calc(100% - 50px) !important;
  background-color: white;
  font-size: 14px !important;
  box-shadow: 0px 1.6px 3.6px rgba(0, 0, 0, 0.3),
    0px 0px 2.9px rgba(0, 0, 0, 0.23);
  border-radius: 4px;
}
.ui-menu-item {
  padding: 2px;
}
/*-----------------------------------------------------------*/
.wrapper {
  max-width: 1200px;
  margin: auto;
}

header {
  height: 60px;
  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
  /*background-color: rgb(229, 233, 241);*/
  /*background-color: rgb(53, 115, 173);
  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.33);*/
  width: 100%;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 10002;
  background-color: #000000;
}
.mobile-menu-header {
  background-color: rgb(53, 115, 173);
  height: 60px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  padding: 0 15px;
  padding-left: 20px;
}
.header_humburger_menu {
  display: none;
}
.header_mobile_menus div {
  height: 60px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin-right: 25px;
}
.header_mobile_menus i {
  color: rgb(153, 216, 241);
  font-size: 21px;
}
.header_mobile_menus_item.active i {
  color: #db7fd0;
}
.site-logo {
  cursor: pointer;
  display: flex;
}
.site-logo-img {
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.site-logo p img {
  width: 45px;
}
.site-logo-txt {
  margin-left: 5px;
  display: flex;
  flex-direction: column;
  justify-content: center;
}
.site-logo-txt p {
  color: rgb(169, 221, 255);
  font-family: Sans-serif;
  font-family: "Prompt", sans-serif;
  font-weight: 1000;
  font-size: 24px;
}
.site-logo-txt span {
  font-size: 13px;
  color: #db7fd0;
}
main {
}
.footer-site-logo {
  text-align: center;
}
.footer-site-logo img {
  width: 50px;
}
footer {
  background-color: #000000;
  min-height: 300px;
}

.hero-section {
  display: none;
  animation: pop-in 0.2s ease-out;
  position: absolute;
  top: calc(-100vh + 60px);
  z-index: 1000;
  width: calc(100vw - 19px);
  padding: 5px;
  height: calc(100vh - 60px);
  padding-top: 10px;
  background-size: auto;
  background-repeat: no-repeat;
  background-position: right;
  background-color: rgba(0, 0, 0, 0.424);
}
.search-form-container {
  margin: auto;
  max-width: 1200px;
  padding-top: 30px;
  border-radius: 9px;
  /*box-shadow: 1px 2px 3px rgba(0,0,0,0.7);*/
}
/*.main-search-form {
  padding: 10px;
  background-color: white;
  min-height: 100px;
  border-radius: 6px;
  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.33);
}*/

.two-search-inputs-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}
.two-search-inputs-container .each_flex-side {
  width: calc(50% - 5px);
}
.two-search-inputs-container .first {
  width: 50%;
}
.main-search_txt_input {
  padding-left: 14px;
  border: 1px solid rgba(0, 0, 0, 0.356);
  border-radius: 9px;
  background-color: white;
  /*box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.33);*/
  width: 100%;
}
.main-search_txt_input input[type="text"],
.main-search_txt_input input[type="number"] {
  margin-left: 5px;
  width: calc(100% - 30px);
  padding: 14px;
  padding-left: 0;
  background: none;
  border: none;
}
.main-search_txt_input i {
  color: rgb(52, 75, 85);
}
/* ... */

